test_suite/tests/ui/identifier/both.stderr
error: `field_identifier` and `variant_identifier` cannot both be set
  --> $DIR/both.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

